--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/router": "~3.4.0",
     "@angular/upgrade": "~2.4.0",
     "angular-in-memory-web-api": "~0.2.4",
+    "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "normalize.css": "^5.0.0",
